[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/consigue_ingrediente_Asombro.gd" type="Script" id=1]
[ext_resource path="res://objects/player_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/little_chef.tscn" type="PackedScene" id=3]
[ext_resource path="res://maps/backdoors.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/portal.tscn" type="PackedScene" id=5]

[node name="consigue_ingrediente_Nostalgia" type="Node2D"]
script = ExtResource( 1 )

[node name="backdoors" parent="." instance=ExtResource( 4 )]

[node name="opened_door_1" parent="backdoors/door" index="2" instance=ExtResource( 5 )]
position = Vector2( 0, 26 )

[node name="closed_door_2" parent="backdoors/door2" index="2" instance=ExtResource( 5 )]
position = Vector2( -1, 26 )

[node name="opened_door_3" parent="backdoors/door3" index="2" instance=ExtResource( 5 )]
position = Vector2( 2, -25 )

[node name="little_chef" parent="." instance=ExtResource( 3 )]
position = Vector2( 1010, 271 )

[node name="player_camera" parent="." instance=ExtResource( 2 )]
position = Vector2( 1009, 336 )

[connection signal="player_entered" from="backdoors/portal_to_kitchen" to="." method="_on_portal_to_kitchen_player_entered"]
[connection signal="player_entered" from="backdoors/door/opened_door_1" to="." method="_on_opened_door_1_player_entered"]
[connection signal="player_entered" from="backdoors/door2/closed_door_2" to="." method="_on_closed_door_2_player_entered"]
[connection signal="player_entered" from="backdoors/door3/opened_door_3" to="." method="_on_opened_door_3_player_entered"]

[editable path="backdoors"]
